--- a/design.ui
+++ b/design.ui
@@ -571,7 +571,14 @@
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QComboBox" name="viewFocus"/>
+         <widget class="QComboBox" name="viewFocus">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
